# msr

./: README.md
2020-msr1-exercise-01-bayes-filter/assignment/: ex2_1.ipynb
2020-msr1-exercise-01-bayes-filter/assignment/.ipynb_checkpoints/: ex2_1-checkpoint.ipynb
2020-msr1-exercise-02-grid-mapping/assignment/: ex3.ipynb  ex3.py
2020-msr1-exercise-02-grid-mapping/assignment/.ipynb_checkpoints/: ex3-checkpoint.ipynb
msr_ws/src/grid_map_known_poses/: CMakeLists.txt  package.xml
msr_ws/src/grid_map_known_poses/include/: gmwkp.h
msr_ws/src/grid_map_known_poses/launch/: grid_mapping_sim.launch
msr_ws/src/grid_map_known_poses/src/: gmwkp.cpp  scan_to_pcl.cpp
msr_ws/src/grid_map_known_poses/viz/: gmwkp.rviz
